redis-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      tier: frontend
  template:
    metadata:
      labels:
        app: redis
        tier: frontend
    spec:
      containers:
        - image: redis:5.0.6-alpine3.10
          name: redis
          resources:
            limits:
              memory: "500Mi"
              cpu: "400m"
            requests:
              cpu: "50m"
              memory: "100Mi"
