ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: counter
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: production
spec:
  tls:
    - hosts:
        - counter.sysrant.com
      secretName: counter
  rules:
    - host: counter.sysrant.com
      http:
        paths:
          - backend:
              serviceName: counter
              servicePort: 80
